# pg_carbon

./: README.md  build.sh  lib.c  meson.build  pg_carbon--0.0.1.sql  pg_carbon--1.0.sql  pg_carbon.control
src/bridge/: lib.c
src/common/: memory.h
src/metadata/: metadata.cpp  metadata.h
src/operators/: operators.cpp  operators.h
src/optimizer/: column.h  memo.cpp  memo.h  optimizer.cpp  optimizer.h  preprocess.cpp  preprocess.h  scheduler.cpp  scheduler.h  translator.cpp  translator.h
src/rules/: rules.cpp  rules.h
